group markdown into fewer cells

--- a/public/waldo.ipynb
+++ b/public/waldo.ipynb
@@ -4,13 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Computing the optimal path for finding Waldo"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Computing the optimal path for finding Waldo\n",
+    "\n",
     "by [Randal S. Olson](http://www.randalolson.com/), 3 Feb 2015\n",
     "\n",
     "This notebook provides the methodology and code used in the blog post, [Here’s Waldo: Computing the optimal search strategy for finding Waldo](http://www.randalolson.com/2015/02/03/heres-waldo-computing-the-optimal-search-strategy-for-finding-waldo/).\n",
@@ -22,13 +17,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Read the data into a pandas DataFrame"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Read the data into a pandas DataFrame\n",
+    "\n",
     "Since we already have all 68 locations of Waldo from [Slate](http://www.slate.com/content/dam/slate/articles/arts/culturebox/2013/11/131111_heresWaldo920_1.jpg.CROP.original-original.jpg), we can jump right into analyzing them. "
    ]
   },
@@ -36,7 +26,8 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -143,13 +134,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plot the dots according to the book they came from"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Plot the dots according to the book they came from\n",
+    "\n",
     "The first basic visualization that we can make is to plot all of the points according to the book that they came from.\n",
     "\n",
     "The dashed line in the center represents the crease of the book, as \"Where's Waldo\" illustrations always stretched over two pages."
@@ -201,7 +187,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": ["_Further reading: [Randal's original notebook](http://nbviewer.ipython.org/github/rhiever/Data-Analysis-and-Machine-Learning-Projects/blob/master/wheres-waldo-path-optimization/Where%27s%20Waldo%20path%20optimization.ipynb)_"]
+   "source": [
+    "_Further reading: [Randal's original notebook](http://nbviewer.ipython.org/github/rhiever/Data-Analysis-and-Machine-Learning-Projects/blob/master/wheres-waldo-path-optimization/Where%27s%20Waldo%20path%20optimization.ipynb)_"
+   ]
   }
  ],
  "metadata": {
