get waldo running and crashing on import

--- a/public/waldo.ipynb
+++ b/public/waldo.ipynb
@@ -180,8 +180,7 @@
     "plt.ylim(0, 8)\n",
     "plt.xticks([])\n",
     "plt.yticks([])\n",
-    "plt.legend(loc=\"upper center\", ncol=7, frameon=True, fancybox=True, bbox_to_anchor=(0.5, 1.1))\n",
-    ";"
+    "plt.legend(loc=\"upper center\", ncol=7, frameon=True, fancybox=True, bbox_to_anchor=(0.5, 1.1))\n"
    ]
   },
   {
