import stubs version 0.0.0.01-prealpha1

--- a/public/waldo.ipynb
+++ b/public/waldo.ipynb
@@ -127,7 +127,10 @@
     "import pandas as pd\n",
     "\n",
     "wheres_waldo_locations = pd.read_csv(\"waldo-locations.csv\")\n",
-    "wheres_waldo_locations.describe()"
+    "wheres_waldo_locations.describe()\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
