plot point takes a color arg

--- a/public/waldo.ipynb
+++ b/public/waldo.ipynb
@@ -177,7 +177,7 @@
     "plt.plot([6.375, 6.375], [0, 8], \"--\", color=\"black\", alpha=0.4, lw=1.25)\n",
     "\n",
     "for book, group in wheres_waldo_locations.groupby(\"Book\"):\n",
-    "    plt.plot(group.X, group.Y, \"o\", label=\"Book %d\" % (book))\n",
+    "    plt.plot(group.X, group.Y, \"#0aa\")\n",
     "\n",
     "plt.xlim(0, 12.75)\n",
     "plt.ylim(0, 8)\n",
