waldo sample notebook fixup

--- a/sample-notebooks/wheres-waldo.ipynb
+++ b/sample-notebooks/wheres-waldo.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "This notebook provides the methodology and code used in the blog post, [Here’s Waldo: Computing the optimal search strategy for finding Waldo](http://www.randalolson.com/2015/02/03/heres-waldo-computing-the-optimal-search-strategy-for-finding-waldo/).\n",
     "\n",
-    "###Notebook by [Randal S. Olson](http://www.randalolson.com/)\n",
+    "### Notebook by [Randal S. Olson](http://www.randalolson.com/)\n",
     "\n",
     "Please see the [repository README file](https://github.com/rhiever/Data-Analysis-and-Machine-Learning-Projects#license) for the licenses and usage terms for the instructional material and code in this notebook. In general, I have licensed this material so that it is widely useable and shareable as possible."
    ]
@@ -188,14 +188,8 @@
     "plt.plot([6.375, 6.375], [0, 8], \"--\", color=\"black\", alpha=0.4, lw=1.25)\n",
     "\n",
     "for book, group in wheres_waldo_locations.groupby(\"Book\"):\n",
-    "    plt.plot(group.X, group.Y, \"o\", label=\"Book %d\" % (book))\n",
-    "\n",
-    "plt.xlim(0, 12.75)\n",
-    "plt.ylim(0, 8)\n",
-    "plt.xticks([])\n",
-    "plt.yticks([])\n",
-    "plt.legend(loc=\"upper center\", ncol=7, frameon=True, fancybox=True, bbox_to_anchor=(0.5, 1.1))\n",
-    ";"
+    "    plt.plot(group.X, group.Y, '#07c')\n",
+    "\n"
    ]
   },
   {
