simple import syntax

--- a/sample-notebooks/quakes.ipynb
+++ b/sample-notebooks/quakes.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from matplotlib import pyplot as plt\n",
+    "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
    ]
   },
