cell to plot time series data

--- a/sample-notebooks/resample-test.ipynb
+++ b/sample-notebooks/resample-test.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Quakes -- resample test"
+    "# Resample test / quakes"
    ]
   },
   {
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -27,7 +27,7 @@
        "1114"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -58,7 +58,7 @@
        "['Oklahoma', 'Arizona', 'Utah', 'Maine', 'Nevada']"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -87,7 +87,7 @@
        "899"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -118,7 +118,7 @@
        "Timestamp('1974-02-15 17:33:49.200000')"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -140,7 +140,7 @@
        "Timestamp('2014-12-31 12:19:10.200000')"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -211,7 +211,7 @@
        "Freq: A-DEC, Name: id, dtype: int64"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,6 +220,39 @@
     "data = ok_quakes.set_index(\"time\")[\"id\"].resample(\"A\", how=\"count\")\n",
     "data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXgAAAEACAYAAAC57G0KAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAFnVJREFUeJzt3WuwXWd93/Hvz7IVW5JjoZrIsixqUzCgBmpwYygEIjfg\nCteVzXTGNtMmHmKYKU6BkilTOZPWyptwmebSmcZ9USCjuMEdlQyOKUwi2ViF3nAcZAyWhe20miIH\nHTlAHF+wke1/X6x1YOtI55y997nspaXvZ0Zz1n3/z6N9fvvZz157rVQVkqT+OW3SBUiSloYBL0k9\nZcBLUk8Z8JLUUwa8JPWUAS9JPTVUwCdZm+SzSR5Ksj/JG5OsS7InycNJdidZO7D9zUkeSXIgyRVL\nV74kaTbD9uD/HfDFqnoN8DrgALAd2FNVFwN3t/Mk2QxcB2wGtgK3JvGdgiQts3mDN8k5wFur6tMA\nVfV8VT0BbAN2tpvtBK5pp68Gbq+qo1V1EHgUuGyxC5ckzW2YnvVFwONJfi/J15L8xySrgfVVNdVu\nMwWsb6fPBw4N7H8I2LhoFUuShjJMwJ8OvAG4tareADxNOxwzrZrrHcx1zQOvhyBJy+z0IbY5BByq\nqj9t5z8L3AwcTnJeVR1OsgE40q5/DNg0sP8F7bIfSWLgS9IYqirDbpthLjaW5MvAe6vq4SQ7gFXt\nqu9W1ceTbAfWVtX29kPWz9CMu28E7gJeUQMPlKRGKXJSkuyoqh2TrmM+1rm4ToY6T4YawToX26jZ\nOUwPHuADwB8kWQn8OfAeYAWwK8mNwEHgWoCq2p9kF7AfeB64qYZ5FZEkLaqhAr6qvg78zAlWvX2W\n7X8D+I0F1CVJWiDPT5/b3kkXMKS9ky5gSHsnXcCQ9k66gCHsnXQBQ9o76QKGtHfSBcwn4e+MvM8k\nRk9OljF4SeqKhN+F3DRKdtqDl6STw5pRdzDgJenkYMBLUk8Z8JLUUwa8JPWUAS9JPWXAS1JPGfCS\n1FMGvCT1TcIK4KxR9zPgJan7VtHci2MkBrwkdd8a4KlRdzLgJan7DHhJ6ikDXpJ6yoCXpJ4y4CWp\npwx4SeqpszHgJamX7MFLUk8Z8JLUUwa8JPWUAS9JPWXAS1JPGfCS1FMGvCT1lAEvST21Bnhy1J2G\nCvgkB5M8kGRfknvbZeuS7EnycJLdSdYObH9zkkeSHEhyxahFSZKOsaQ9+AK2VNXrq+qydtl2YE9V\nXQzc3c6TZDNwHbAZ2ArcmsR3CpI0viUfosmM+W3AznZ6J3BNO301cHtVHa2qg8CjwGVIksa15D34\nu5Lcl+R97bL1VTXVTk8B69vp84FDA/seAjaOWpgkCRICrGaMe7KePuR2b6mq7yR5KbAnyYHBlVVV\nSWqO/edaJ0ma3VnAc1W8kJnjKPMYKuCr6jvtz8eTfI5myGUqyXlVdTjJBuBIu/ljwKaB3S9olx0j\nyY6B2b1VtXe00iWp35JsgXP/Ibyvko/uGHn/qrk710lWASuq6skkq4HdwK8Dbwe+W1UfT7IdWFtV\n29sPWT9D8yKwEbgLeEUNPFCSqqoRX4sk6dST8HLgripePmp2DtODXw98Ls17g9OBP6iq3UnuA3Yl\nuRE4CFwLUFX7k+wC9gPPAzfVfK8ikqTZjPUBKwzRg18K9uAlaTgJbwb+bRVvHjU7PT9dkrptrNv1\ngQEvSV039hCNAS9J3WbAS1JPGfCS1FMGvCT1lAEvST1lwEtSTxnwktRTBrwk9ZQBL0k9Ndb9WMGA\nl6SuswcvST1lwEtSTxnwktRTBrwk9U17w+01jHHDbTDgJanLVgIvVvHDcXY24CWpu8YengEDXpK6\nzICXpJ4y4CWpp8a+HysY8JLUZfbgJamnDHhJ6ikDXpJ6yoCXpJ4y4CWppwx4SeopA16SemrpAz7J\niiT7kny+nV+XZE+Sh5PsTrJ2YNubkzyS5ECSK8YtTJI0/u36YPge/IeA/UC189uBPVV1MXB3O0+S\nzcB1wGZgK3BrEt8lSNJ4lrYHn+QC4Ergk0DaxduAne30TuCadvpq4PaqOlpVB4FHgcvGLU6STnFL\nPkTz28BHgBcHlq2vqql2egpY306fDxwa2O4QsHHc4iTpFLeggD99rpVJrgKOVNW+JFtOtE1VVZI6\n0brpTWY59o6B2b1VtXfuUiXpVPPF9fAvfjF5ZOs4e88Z8MCbgW1JrgTOBH4yyW3AVJLzqupwkg3A\nkXb7x4BNA/tf0C47TlXtGKdgSTp1XBm48hNVHARIcssoe885RFNVv1pVm6rqIuB64EtV9QvAncAN\n7WY3AHe003cC1ydZmeQi4JXAvaMUJEn6kaUbojmB6eGWjwG7ktwIHASuBaiq/Ul20Zxx8zxwU1XN\nNXwjSZrdggI+k8jfJFVVmX9LSTo1JZwB/AA4o6rpXI+anZ6jLkndtBp4ajrcx2HAS1I3LWh4Bgx4\nSeqqBd2PFQx4Seoqe/CS1FMGvCT1lAEvST1lwEtSTxnwktRTBrwk9ZQBL0k9ZcBLUk8t6H6sYMBL\nUlfZg5eknjLgJamnDHhJ6ikDXpJ6yoCXpJ4y4CWppwx4SeopA16S+iZhBXAmzU23x2bAS1L3rAKe\nqeLFhRzEgJek7lnw/VjBgJekLlrw+DsY8JLURQa8JPWUAS9JPWXAS1JPLX3AJzkzyVeT3J9kf5KP\ntsvXJdmT5OEku5OsHdjn5iSPJDmQ5IqFFihJp6ClD/iqeha4vKouAV4HXJ7kZ4HtwJ6quhi4u50n\nyWbgOmAzsBW4NYnvEiRpNMszRFNVz7STK4EVwPeBbcDOdvlO4Jp2+mrg9qo6WlUHgUeByxZapCSd\nYpYn4JOcluR+YAq4p6oeBNZX1VS7yRSwvp0+Hzg0sPshYONCi5SkU8yC78cKcPp8G1TVi8AlSc4B\n/iTJ5TPWV5Ka6xAnWphkx8Ds3qraO3+5knRKWAMcTrIF2DLuQeYN+GlV9USSLwCXAlNJzquqw0k2\nAEfazR4DNg3sdkG77ETH2zFeyZLUe2uAp9qO797phUluGeUg851Fc+70GTJJzgLeAewD7gRuaDe7\nAbijnb4TuD7JyiQXAa8E7h2lIEnS4ozBz9eD3wDsbM+EOQ24raruTrIP2JXkRuAgcC1AVe1PsgvY\nDzwP3FRVcw3fSJKOtygBn0nkb5Kqqiz7A0vSSSDhy8CvVfHlY5ePlp2eoy5J3eOlCiSppwx4Seop\nA16SesqAl6S+SQiwGnh6occy4CWpW1YBz1XxwkIPZMBLUrcsyvAMGPCS1DUGvCT1lAEvST1lwEtS\nTxnwktRTBrwk9ZQBL0k9tSi36wMDXpK6xh68JPWUAS9JPWXAS1JPGfCS1FMGvCT1lAEvST1lwEtS\nTxnwktRTBrwk9ZQBL0k9ZcBLUt+0N9w+m0W44TYY8JLUJT8BvFDFDxfjYAa8JHXHog3PwBABn2RT\nknuSPJjkm0k+2C5fl2RPkoeT7E6ydmCfm5M8kuRAkisWq1hJ6rnlDXjgKPDhqvrbwJuAX07yGmA7\nsKeqLgbubudJshm4DtgMbAVuTeI7BUma3/IGfFUdrqr72+mngIeAjcA2YGe72U7gmnb6auD2qjpa\nVQeBR4HLFqtgSeqxZe/B/0iSC4HXA18F1lfVVLtqCljfTp8PHBrY7RDNC4IkaW6LGvCnD7thkjXA\nHwIfqqonk/xoXVVVkppj9+PWJdkxMLu3qvYOW4sk9dQxAZ9kC7Bl3IMNFfBJzqAJ99uq6o528VSS\n86rqcJINwJF2+WPApoHdL2iXHaOqdoxbtCT11DH3Y207vnun55PcMsrBhjmLJsCngP1V9TsDq+4E\nbminbwDuGFh+fZKVSS4CXgncO0pRknSKWvYhmrcA/xR4IMm+dtnNwMeAXUluBA4C1wJU1f4ku4D9\nwPPATVU11/CNJKmxqAGfSWRvkqqqzL+lJJ06EnYAVDU/j18/WnZ6frokdcfkTpOUJC0pA16SesqA\nl6SeMuAlqacMeEnqKQNeknrKgJeknjLgJamnzsaAl6ResgcvSX2TsBJYATy3WMc04CWpG1YDT1Ud\nf/+McRnwktQNizo8Awa8JHWFAS9JPWXAS1JPHXO7vsVgwEtSN9iDl6SeMuAlqacMeEnqKQNeknrK\ngJeknjLgJamnDHhJ6ikDXpJ6yoCXpJ4y4CWppwx4Seqp5Q/4JJ9OMpXkGwPL1iXZk+ThJLuTrB1Y\nd3OSR5IcSHLFYhYrST22qPdjheF68L8HbJ2xbDuwp6ouBu5u50myGbgO2Nzuc2sS3yVI0vyWvwdf\nVV8Bvj9j8TZgZzu9E7imnb4auL2qjlbVQeBR4LLFKVWS+inhZTR5/N3FPO64vev1VTXVTk8B69vp\n84FDA9sdAjaO+RiSdKrYBnyhiucX86ALHj6pqoI5bxK7aDeQlaSeuhr4o8U+6Olj7jeV5LyqOpxk\nA3CkXf4YsGlguwvaZcdJsmNgdm9V7R2zFkk6aSWsBd4IvOv4ddkCbBn72E0HfL4CciHw+ap6bTv/\nCeC7VfXxJNuBtVW1vf2Q9TM04+4bgbuAV9SMB0lSVZVxi5akvkh4N/BPqrhq/m1Hy855e/BJbgd+\nDjg3ybeBfwN8DNiV5EbgIHAtQFXtT7IL2A88D9w0M9wlScdYkuEZGLIHv+gPag9ekkhYSTPE/eoq\nDs+//WjZ6TnqkjQ5W4ADw4T7OAx4SZqcJRuegfHPopEkLUBCaM5//wdL9Rj24CVpMt4APAs8tFQP\nYMBL0mRcDfxR1dJ9GdSAl6TJ2MYSjr+DAS9Jyy7hQpovg/7PpXwcA16Slt824L9W8cJSPogBL0kL\nlHB1wt8cYZclPT1ymgEvSQuQ8BGa+2J8LuHMIbZ/CfAzwJ6lrs2Al6QxJCTho8B7gJ8G/hz4zSF2\nvRLYW8XTS1kfGPCSNLKE04BbgXcAb6viEPBeYGvSXHxxDssyPANebEySRpJwBs2QzPnAtir+emDd\npcAfA3+vikdPsO9P0NwF71VVTM1cP/9je7ExSVoSCauAz9HcIPudg+EOUMWfATuAXbOMx18O7B8n\n3MdhwEvSEBLOoemd/xXwj6v4wSyb3srs4/HLNjwDBrwkzSvhpcCXgAeAX6zi6GzbtpceOG48vh23\nX/Jvrw4y4CVpDgkbgC8DXwQ+UMWL8+1TxRM0d7r73YRXtIvfADxVxYElK3YGA16SZpGwnqbnflsV\n/3qUC4OdYDx+WYdnwLNoJOmE2mGZe4D/UsWvj3mMALtobsv3VuD9VfyP8WsaLTsNeEmaIWEdTc/9\nC8CvLeSSvu2Hs1+jOfPm/IVcf2bU7PSOTpI0IGEtzWUEdrPAcIdmPD7hXcAlS31xsZnswUtSq+1t\n7wb+F/DhpbwZxzj8opMkjSHhbJozZe6jg+E+DgNe0ikvYTXNePuDNKdCnvThDga8pFNce/mBz9N8\n+/SfDXOe+8nCgJd0ykq4gOZUyEPAe/sU7mDASzpFJbwVuJfm4mE3LPcZLsvB0yQlnVLaLx+9H7iF\nJtj/eMIlLZkl6cEn2ZrkQJJHkvyrpXgMSRpVe8mAT9EE/Fv6HO6wBAGfZAXw74GtwGbg3Ules9iP\nsxySbJl0DcOwzsV1MtR5MtQI3aqzHW//b8DZzLghR5fqXExL0YO/DHi0qg5W1VHgP9NcZOdktGXS\nBQxpy6QLGNKWSRcwpC0zF7T331yX8OqE89q3+ZO0ZcKPP6wtky4Ajhtvv7aKp2ZssmXZi1oGSzEG\nvxH49sD8IeCNMzdqb221Hvip9ufg9N8AngOeAp6e5ef3aC7gMzX9b44L8M+p/WNdc3w9V12W8Etz\n1PEMLPh82eeBp8f5gCfhdGA1rF6ZcNpinAHQtsXZHP//8iLHt/dQNw1OWNnUueEnE17dTLPmBD/P\nWGj9i2AFXP/2hAs59vf/KZr/78eBdcALCd+guT749M/9VTwz18HbtlgDvJTjn/+D8+HHbX3k+OmX\nnJWwsoofLvQXboctLgRe3v77W+3PDcB3aE4f/D8D/w5W8ewsx5muv/35j96Y8D6O/9uZnn4WWHuC\n339wumZvB6aAJ4CzOPb5NDh9Ic312Xs93n4iSxHwwwbeJxkIC+AvgH3t9PdgOhSOC4LVNH8cr2LG\nEyLh6MDxvj9PLStoXkjmeBK95FzgbSd4/OnpVUP+rnM5A1jV1j7zyf80zR/A9JN3Zh1nNNt8+Exg\ne8IP5jjGMG0x/Yf1Asf/EZ3GsUG0PuGFgW3+iqY9TtROaeq44TSaO8rPrG96esFhtQhehOeepbn+\n92AbHJkOtfZFcAPwOuC1NLdh+yDwqoRvAweBMzlxW0Dzuz7O8YF1/8B0cWzYvYaml9k+59//MuBX\n0ryPOFFbPk3TeZjLOTRBfi7w/zg2xL9CE+4b2m02A1e10y9L+Mt2uwzUeNZgezU/164D3sTxz93p\n+bNonjuDWXCE5uJc09OZ0RY/PWP+HJoX39na4a9pxtuPu0dq3y36tWiSvAnYUVVb2/mbgRer6uMD\n2/TiW2KStNwmerngJKcD3wJ+nqZXfi/w7qp6aFEfSJI0p0Ufoqmq55P8c+BPaN76f8pwl6TlN5HL\nBUuSlt6yX6rgZPkSVJKDSR5Isi/JvZOuByDJp5NMJfnGwLJ1SfYkeTjJ7iRrJ1ljW9OJ6tyR5FDb\nnvuSbJ1kjW1Nm5Lck+TBJN9M8sF2eafadI46O9WmSc5M8tUk9yfZn+Sj7fKutedsdXaqPduaVrS1\nfL6dH6ktl7UH334J6lvA24HHgD+lo+PzSf4vcGlVfW/StUxL8laaMwN+v6pe2y77BPCXVfWJ9gXz\nJVW1vYN13gI8WVW/NcnaBiU5Dzivqu5Psgb4M+Aa4D10qE3nqPNautemq6rqmfazuP8O/EtgGx1q\nzznq/Hm6156/AlwKnF1V20b9e1/uHvzJ9iWoSX+Z5RhV9RWa0z8HbQN2ttM7af7wJ2qWOqF77Xm4\nqu5vp58CHqL5Hken2nSOOqF7bTr9PYCVNJ/BfZ+OtSfMWid0qD2TXEBzWvEn+XFdI7Xlcgf8ib4E\ntXGWbSetgLuS3JfkfZMuZg7rq2qqnZ6iOS+4qz6Q5OtJPjXpt+kzJbkQeD3wVTrcpgN1/u92Uafa\nNMlpSabP57+nqh6kg+05S53Qrfb8beAjcMwXGEdqy+UO+JPpE923VNXrgXcCv9wOO3RaNeNtXW3j\n/wBcBFxC8wWa35xsOT/WDnv8IfChqnpycF2X2rSt87M0dT5FB9u0ql6sqkuAC4C3Jbl8xvpOtOcJ\n6txCh9ozyVXAkaraxyzvKoZpy+UO+MeATQPzm2h68Z1TVd9pfz5Oc/2KyyZb0aym2jFakmyg+eZf\n51TVkWrRvOXsRHsmOYMm3G+rqjvaxZ1r04E6/9N0nV1tU4CqeoLmFniX0sH2nDZQ59/tWHu+GdjW\nfhZ4O/D3k9zGiG253AF/H/DKJBcmWQlcB9y5zDXMK8mqJGe306uBK2iuN9JFdwI3tNM3AHfMse3E\ntE/Gae+iA+2ZJDSXjt1fVb8zsKpTbTpbnV1r0yTnTg9rJDkLeAfN5Ue61p4nrHM6OFsTbc+q+tWq\n2lRVFwHXA1+qql9g1LasqmX9RzPk8S3gUeDm5X78IWu8iOa6IPcD3+xKnTSv5H9Bc82Wb9Oc7bEO\nuAt4GNgNrO1gnb8E/D7NBbm+3j4p13egzp+lGd+8nyaI9tFc5rpTbTpLne/sWpvSXJfna22dDwAf\naZd3rT1nq7NT7TlQ788Bd47Tln7RSZJ6ynuySlJPGfCS1FMGvCT1lAEvST1lwEtSTxnwktRTBrwk\n9ZQBL0k99f8B1ZtVIquaYPMAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x10b850650>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "plt.plot(data)\n",
+    "pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
