Remove mock variable (iterrows works). Add doc

--- a/sample-notebooks/wheres-waldo.ipynb
+++ b/sample-notebooks/wheres-waldo.ipynb
@@ -33,6 +33,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DOC: Leave 3rd import below commented out until dataframe is loaded. Then uncomment the line for the rest of the notebook to load"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DOC: Opening the notebook with the three imports uncommented makes the livebook freeze/crash"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import math, random"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -132,10 +159,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "import math, random\n",
-    "\n",
     "wheres_waldo_locations = pd.read_csv(\"waldo-locations.csv\")\n",
     "wheres_waldo_locations.describe()"
    ]
@@ -214,91 +237,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Above doesn't work yet. Mocking variable until it does"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "waldo_location_map = {'B1P1': (5.5972222220000001, 1.9305555559999998),\n",
-    " 'B1P10': (5.9027777779999999, 6.0833333329999997),\n",
-    " 'B1P11': (5.4305555559999998, 6.4027777779999999),\n",
-    " 'B1P12': (9.4166666670000012, 3.6944444439999997),\n",
-    " 'B1P2': (7.7638888889999995, 5.0),\n",
-    " 'B1P3': (10.722222220000001, 1.9305555559999998),\n",
-    " 'B1P4': (3.513888889, 2.0833333330000001),\n",
-    " 'B1P5': (9.25, 5.2916666670000003),\n",
-    " 'B1P6': (5.3055555559999998, 5.125),\n",
-    " 'B1P7': (3.6666666669999999, 5.2916666670000003),\n",
-    " 'B1P8': (11.30555556, 2.5555555559999998),\n",
-    " 'B1P9': (11.16666667, 1.7916666669999999),\n",
-    " 'B2P1': (10.375, 7.1944444440000002),\n",
-    " 'B2P10': (5.2638888889999995, 0.81944444400000005),\n",
-    " 'B2P11': (2.388888889, 4.4861111110000005),\n",
-    " 'B2P12': (5.2638888889999995, 2.7291666669999999),\n",
-    " 'B2P2': (9.8888888890000004, 5.7777777779999999),\n",
-    " 'B2P3': (5.4305555559999998, 5.4444444440000002),\n",
-    " 'B2P4': (1.4444444440000002, 2.0972222220000001),\n",
-    " 'B2P5': (0.95833333300000001, 1.2777777779999999),\n",
-    " 'B2P6': (0.95833333300000001, 0.97222222200000008),\n",
-    " 'B2P7': (11.95833333, 3.5416666669999999),\n",
-    " 'B2P8': (10.375, 6.4305555559999998),\n",
-    " 'B2P9': (12.277777779999999, 4.8055555559999998),\n",
-    " 'B3P1': (7.3333333329999997, 5.1388888889999995),\n",
-    " 'B3P10': (2.388888889, 2.7291666669999999),\n",
-    " 'B3P11': (11.01388889, 4.8194444440000002),\n",
-    " 'B3P2': (2.0833333330000001, 3.8472222220000001),\n",
-    " 'B3P3': (5.75, 2.25),\n",
-    " 'B3P4': (9.9583333329999988, 4.7916666670000003),\n",
-    " 'B3P5': (6.8611111110000005, 6.7361111110000005),\n",
-    " 'B3P6': (3.0416666669999999, 1.9166666669999999),\n",
-    " 'B3P7': (7.9444444440000002, 5.3055555559999998),\n",
-    " 'B3P8': (8.4583333329999988, 6.7222222220000001),\n",
-    " 'B3P9': (3.3472222220000001, 2.5694444440000002),\n",
-    " 'B4P1': (12.125, 1.2916666670000001),\n",
-    " 'B4P10': (7.9861111110000005, 2.4305555559999998),\n",
-    " 'B4P11': (9.097222222000001, 4.6527777779999999),\n",
-    " 'B4P2': (0.80555555599999995, 2.25),\n",
-    " 'B4P3': (2.0833333330000001, 0.80555555599999995),\n",
-    " 'B4P4': (1.763888889, 4.3333333329999997),\n",
-    " 'B4P5': (12.44444444, 1.625),\n",
-    " 'B4P6': (9.25, 3.2222222220000001),\n",
-    " 'B4P7': (11.80555556, 4.6527777779999999),\n",
-    " 'B4P8': (6.6944444440000002, 1.625),\n",
-    " 'B4P9': (11.48611111, 3.5416666669999999),\n",
-    " 'B5P1': (12.44444444, 7.6944444440000002),\n",
-    " 'B5P10': (0.625, 7.7083333329999997),\n",
-    " 'B5P11': (7.4861111110000005, 4.0069444440000002),\n",
-    " 'B5P2': (11.51388889, 2.7569444439999997),\n",
-    " 'B5P3': (4.7916666670000003, 5.4444444440000002),\n",
-    " 'B5P4': (2.1666666669999999, 2.25),\n",
-    " 'B5P5': (4.3055555559999998, 2.888888889),\n",
-    " 'B5P6': (7.6666666670000003, 7.3611111110000005),\n",
-    " 'B5P7': (12.125, 2.9097222220000001),\n",
-    " 'B5P8': (3.513888889, 4.3194444440000002),\n",
-    " 'B5P9': (5.4166666670000003, 0.33333333300000001),\n",
-    " 'B6P1': (6.6944444440000002, 4.9722222220000001),\n",
-    " 'B6P11': (1.125, 2.5694444440000002),\n",
-    " 'B6P12': (8.0, 4.7916666670000003),\n",
-    " 'B6P2': (4.625, 1.2777777779999999),\n",
-    " 'B6P5': (0.63888888899999996, 1.7777777780000001),\n",
-    " 'B6P8': (11.16666667, 6.4027777779999999),\n",
-    " 'B7P1': (4.9444444440000002, 6.5694444440000002),\n",
-    " 'B7P2': (11.33333333, 6.0833333329999997),\n",
-    " 'B7P3': (6.0694444440000002, 4.6388888889999995),\n",
-    " 'B7P6': (2.486111111, 2.25),\n",
-    " 'B7P7': (7.1666666670000003, 4.5)}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
@@ -319,6 +257,13 @@
     "        Returns the Euclidean distance between points (x1, y1) and (x2, y2)\n",
     "    \"\"\"\n",
     "    return math.sqrt( (x2 - x1)**2 + (y2 - y1)**2 )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This function works:"
    ]
   },
   {
@@ -521,6 +466,27 @@
     "            del population[i]\n",
     "\n",
     "        population = new_population"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Run genetic algorithm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DOC: The function below runs the algorithm with a small number of iterations (for testing purposes). Its output are some print() statements. They can be seen in Chrome > View > Developer > JS Console. This proves that the code for the algorithm works. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DOC: TODO --> plot of intermediate and final states of the algo. Think what to do with print() hidden in functions [very common practice]"
    ]
   },
   {
