Forgot to comment out offending import statement

--- a/sample-notebooks/wheres-waldo.ipynb
+++ b/sample-notebooks/wheres-waldo.ipynb
@@ -56,7 +56,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "import math, random"
+    "#import math, random"
    ]
   },
   {
