--- a/sample-notebooks/mlex1.ipynb
+++ b/sample-notebooks/mlex1.ipynb
@@ -39,21 +39,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "# Will uncomment numpy import once numpy is there\n",
+    "#import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -109,7 +109,7 @@
        "4      5.8598   6.8233"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -195,7 +195,7 @@
        "max     22.203000  24.147000"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,478 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "That's it!  Thanks for reading.  In Exercise 2 we'll take a look at logistic regression for classification problems."
+    "Now let's implement linear regression using gradient descent to minimize the cost function.  The equations implemented in the following code samples are detailed in \"ex1.pdf\" in the \"exercises\" folder."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First we'll create a function to compute the cost of a given solution (characterized by the parameters theta)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def computeCost(X, y, theta):\n",
+    "    inner = np.power(((X * theta.T) - y), 2)\n",
+    "    return np.sum(inner) / (2 * len(X))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's add a column of ones to the training set so we can use a vectorized solution to computing the cost and gradients."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "data.insert(0, 'Ones', 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's do some variable initialization."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# set X (training data) and y (target variable)\n",
+    "cols = data.shape[1]\n",
+    "X = data.iloc[:,0:cols-1]\n",
+    "y = data.iloc[:,cols-1:cols]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's take a look to make sure X (training set) and y (target variable) look correct."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ones</th>\n",
+       "      <th>Population</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>6.1101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5.5277</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>8.5186</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>7.0032</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5.8598</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Ones  Population\n",
+       "0     1      6.1101\n",
+       "1     1      5.5277\n",
+       "2     1      8.5186\n",
+       "3     1      7.0032\n",
+       "4     1      5.8598"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Profit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>17.5920</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>9.1302</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>13.6620</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>11.8540</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6.8233</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Profit\n",
+       "0  17.5920\n",
+       "1   9.1302\n",
+       "2  13.6620\n",
+       "3  11.8540\n",
+       "4   6.8233"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The cost function is expecting numpy matrices so we need to convert X and y before we can use them.  We also need to initialize theta."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "X = np.matrix(X.values)\n",
+    "y = np.matrix(y.values)\n",
+    "theta = np.matrix(np.array([0,0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here's what theta looks like."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[0, 0]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "theta"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's take a quick look at the shape of our matrices."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((97, 2), (1, 2), (97, 1))"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape, theta.shape, y.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's compute the cost for our initial solution (0 values for theta)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32.072733877455676"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "computeCost(X, y, theta)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So far so good.  Now we need to define a function to perform gradient descent on the parameters theta using the update rules defined in the text."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def gradientDescent(X, y, theta, alpha, iters):\n",
+    "    temp = np.matrix(np.zeros(theta.shape))\n",
+    "    parameters = int(theta.ravel().shape[1])\n",
+    "    cost = np.zeros(iters)\n",
+    "    \n",
+    "    for i in range(iters):\n",
+    "        error = (X * theta.T) - y\n",
+    "        \n",
+    "        for j in range(parameters):\n",
+    "            term = np.multiply(error, X[:,j])\n",
+    "            temp[0,j] = theta[0,j] - ((alpha / len(X)) * np.sum(term))\n",
+    "            \n",
+    "        theta = temp\n",
+    "        cost[i] = computeCost(X, y, theta)\n",
+    "        \n",
+    "    return theta, cost"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Initialize some additional variables - the learning rate alpha, and the number of iterations to perform."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "alpha = 0.01\n",
+    "iters = 1000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's run the gradient descent algorithm to fit our parameters theta to the training set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[-3.24140214,  1.1272942 ]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g, cost = gradientDescent(X, y, theta, alpha, iters)\n",
+    "g"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's plot the linear model along with the data to visually see how well it fits."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Mocking variables to get the plot working until numpy is there\n",
+    "x = [  5.0269    ,   5.20039596,   5.37389192,   5.54738788,\n",
+    "         5.72088384,   5.8943798 ,   6.06787576,   6.24137172,\n",
+    "         6.41486768,   6.58836364,   6.7618596 ,   6.93535556,\n",
+    "         7.10885152,   7.28234747,   7.45584343,   7.62933939,\n",
+    "         7.80283535,   7.97633131,   8.14982727,   8.32332323,\n",
+    "         8.49681919,   8.67031515,   8.84381111,   9.01730707,\n",
+    "         9.19080303,   9.36429899,   9.53779495,   9.71129091,\n",
+    "         9.88478687,  10.05828283,  10.23177879,  10.40527475,\n",
+    "        10.57877071,  10.75226667,  10.92576263,  11.09925859,\n",
+    "        11.27275455,  11.44625051,  11.61974646,  11.79324242,\n",
+    "        11.96673838,  12.14023434,  12.3137303 ,  12.48722626,\n",
+    "        12.66072222,  12.83421818,  13.00771414,  13.1812101 ,\n",
+    "        13.35470606,  13.52820202,  13.70169798,  13.87519394,\n",
+    "        14.0486899 ,  14.22218586,  14.39568182,  14.56917778,\n",
+    "        14.74267374,  14.9161697 ,  15.08966566,  15.26316162,\n",
+    "        15.43665758,  15.61015354,  15.78364949,  15.95714545,\n",
+    "        16.13064141,  16.30413737,  16.47763333,  16.65112929,\n",
+    "        16.82462525,  16.99812121,  17.17161717,  17.34511313,\n",
+    "        17.51860909,  17.69210505,  17.86560101,  18.03909697,\n",
+    "        18.21259293,  18.38608889,  18.55958485,  18.73308081,\n",
+    "        18.90657677,  19.08007273,  19.25356869,  19.42706465,\n",
+    "        19.60056061,  19.77405657,  19.94755253,  20.12104848,\n",
+    "        20.29454444,  20.4680404 ,  20.64153636,  20.81503232,\n",
+    "        20.98852828,  21.16202424,  21.3355202 ,  21.50901616,\n",
+    "        21.68251212,  21.85600808,  22.02950404,  22.203     ]\n",
+    "\n",
+    "f = [  2.238324  ,   2.43663962,   2.63495523,   2.83327084,\n",
+    "         3.03158646,   3.22990207,   3.42821768,   3.6265333 ,\n",
+    "         3.82484891,   4.02316453,   4.22148014,   4.41979575,\n",
+    "         4.61811137,   4.81642698,   5.01474259,   5.21305821,\n",
+    "         5.41137382,   5.60968943,   5.80800505,   6.00632066,\n",
+    "         6.20463627,   6.40295189,   6.6012675 ,   6.79958311,\n",
+    "         6.99789873,   7.19621434,   7.39452995,   7.59284557,\n",
+    "         7.79116118,   7.98947679,   8.18779241,   8.38610802,\n",
+    "         8.58442363,   8.78273925,   8.98105486,   9.17937047,\n",
+    "         9.37768609,   9.5760017 ,   9.77431731,   9.97263293,\n",
+    "        10.17094854,  10.36926416,  10.56757977,  10.76589538,\n",
+    "        10.964211  ,  11.16252661,  11.36084222,  11.55915784,\n",
+    "        11.75747345,  11.95578906,  12.15410468,  12.35242029,\n",
+    "        12.5507359 ,  12.74905152,  12.94736713,  13.14568274,\n",
+    "        13.34399836,  13.54231397,  13.74062958,  13.9389452 ,\n",
+    "        14.13726081,  14.33557642,  14.53389204,  14.73220765,\n",
+    "        14.93052326,  15.12883888,  15.32715449,  15.5254701 ,\n",
+    "        15.72378572,  15.92210133,  16.12041694,  16.31873256,\n",
+    "        16.51704817,  16.71536378,  16.9136794 ,  17.11199501,\n",
+    "        17.31031063,  17.50862624,  17.70694185,  17.90525747,\n",
+    "        18.10357308,  18.30188869,  18.50020431,  18.69851992,\n",
+    "        18.89683553,  19.09515115,  19.29346676,  19.49178237,\n",
+    "        19.69009799,  19.8884136 ,  20.08672921,  20.28504483,\n",
+    "        20.48336044,  20.68167605,  20.87999167,  21.07830728,\n",
+    "        21.27662289,  21.47493851,  21.67325412,  21.87156973]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DOC: This will be the final plot of the notebook --> linear regression performed on input data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "plt.scatter(data.Population, data.Profit)\n",
+    "plt.plot(x, f)"
    ]
   }
  ],
@@ -267,7 +738,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
