--- a/public/forkable/waldo.ipynb
+++ b/public/forkable/waldo.ipynb
@@ -56,7 +56,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "#import math, random"
+    "import math, random"
    ]
   },
   {
@@ -538,7 +538,40 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+      "population = generate_random_population(10)\n",
+      "agent_genome = population[9]\n",
+      "compute_fitness(agent_genome)\n"
+    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+      "agent_xs = []\n",
+      "agent_ys = []\n",
+      "agent_fitness = compute_fitness(agent_genome)\n",
+      "for waldo_loc in agent_genome:\n",
+      "  agent_xs.append(waldo_location_map[waldo_loc][0])\n",
+      "  agent_ys.append(waldo_location_map[waldo_loc][1])"
+    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+      "#If these two run, we can reproduce the plots of original Waldo (minus colors)\n",
+      "plt.scatter(agent_xs, agent_ys)\n",
+      "plt.plot(agent_xs, agent_ys)\n"
+    ]
   }
  ],
  "metadata": {
