Beefed-up earthquakes notebook

--- a/sample-notebooks/earthquakes.ipynb
+++ b/sample-notebooks/earthquakes.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -38,10 +38,10 @@
     {
      "data": {
       "text/plain": [
-       "999"
+       "110171"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
@@ -171,7 +171,7 @@
        "4  earthquake  0101000020AD100000A54E4013618B58C07F6ABC749360...    Oklahoma  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 72,
    "metadata": {
     "collapsed": false
    },
@@ -204,10 +204,10 @@
     {
      "data": {
       "text/plain": [
-       "485"
+       "40000"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,43 +219,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 87,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>state</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>California</th>\n",
+       "      <td>18108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Alaska</th>\n",
+       "      <td>12326</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Nevada</th>\n",
+       "      <td>1975</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Idaho</th>\n",
+       "      <td>1231</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Washington</th>\n",
+       "      <td>973</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Oklahoma          184\n",
-       "Nevada            114\n",
-       "Alaska             91\n",
-       "California         38\n",
-       "Kansas             14\n",
-       "Colorado            8\n",
-       "Idaho               8\n",
-       "Montana             7\n",
-       "Arizona             4\n",
-       "Hawaii              4\n",
-       "Utah                2\n",
-       "Oregon              2\n",
-       "Alabama             2\n",
-       "New Mexico          2\n",
-       "Texas               2\n",
-       "North Carolina      1\n",
-       "Wyoming             1\n",
-       "Maine               1\n",
-       "Name: state, dtype: int64"
+       "            state\n",
+       "California  18108\n",
+       "Alaska      12326\n",
+       "Nevada       1975\n",
+       "Idaho        1231\n",
+       "Washington    973"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "state_counts = us_quakes.state.value_counts()\n",
-    "state_counts"
+    "#state_counts = us_quakes.state.value_counts()\n",
+    "state_counts = pd.DataFrame(us_quakes.state.value_counts())\n",
+    "state_counts.head()"
    ]
   },
   {
@@ -267,38 +289,305 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "No axis named Oklahoma for object type <class 'pandas.core.frame.DataFrame'>",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-36-28e599fd1f6c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mus_quakes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mselect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"state\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Oklahoma\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"time\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"mag\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"A\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhow\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"count\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python2.7/site-packages/pandas/core/generic.pyc\u001b[0m in \u001b[0;36mselect\u001b[0;34m(self, crit, axis)\u001b[0m\n\u001b[1;32m   1539\u001b[0m         \u001b[0mselection\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0mtype\u001b[0m \u001b[0mof\u001b[0m \u001b[0mcaller\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1540\u001b[0m         \"\"\"\n\u001b[0;32m-> 1541\u001b[0;31m         \u001b[0maxis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_axis_number\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1542\u001b[0m         \u001b[0maxis_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_axis_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1543\u001b[0m         \u001b[0maxis_values\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_axis\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python2.7/site-packages/pandas/core/generic.pyc\u001b[0m in \u001b[0;36m_get_axis_number\u001b[0;34m(self, axis)\u001b[0m\n\u001b[1;32m    312\u001b[0m                 \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    313\u001b[0m         raise ValueError('No axis named {0} for object type {1}'\n\u001b[0;32m--> 314\u001b[0;31m                          .format(axis, type(self)))\n\u001b[0m\u001b[1;32m    315\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    316\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_get_axis_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: No axis named Oklahoma for object type <class 'pandas.core.frame.DataFrame'>"
-     ]
+     "data": {
+      "text/plain": [
+       "time\n",
+       "1974-12-31    1\n",
+       "1975-12-31    3\n",
+       "1976-12-31    2\n",
+       "1977-12-31    0\n",
+       "1978-12-31    0\n",
+       "Freq: A-DEC, Name: id, dtype: int64"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = us_quakes.select(\"state\", \"Oklahoma\").set_index(\"time\")[\"mag\"].resample(\"A\", how=\"count\")\n",
+    "data = us_quakes[us_quakes[\"state\"] == \"Oklahoma\"].set_index(\"time\")[\"id\"].resample(\"A\", how=\"count\")\n",
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x110bf7d10>]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plt.plot(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x113ff4b50>]"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = us_quakes[us_quakes[\"state\"] == \"California\"].set_index(\"time\")[\"id\"].resample(\"A\", how=\"count\")\n",
+    "plt.plot(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x110bf7350>]"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = us_quakes[us_quakes[\"state\"] == \"Texas\"].set_index(\"time\")[\"id\"].resample(\"A\", how=\"count\")\n",
+    "plt.plot(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x114091b90>]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = us_quakes[us_quakes[\"state\"] == \"Kansas\"].set_index(\"time\")[\"id\"].resample(\"A\", how=\"count\")\n",
+    "plt.plot(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculating Percentage Change Decade Over Decade\n",
+    "\n",
+    "The most recent complete year of earthquakes is 2014. Below, we compare 2005-2014 to the prior decade, 1995-2004."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def quake_percentage_change(state):\n",
+    "    by_year = pd.DataFrame(us_quakes[us_quakes[\"state\"] == state].set_index(\"time\")[\"id\"].resample(\"AS\", how=\"count\"))\n",
+    "    by_year[\"start\"] = by_year.index\n",
+    "    by_year[\"year\"] = by_year[\"start\"].apply(lambda x: x.year)\n",
+    "    decade_05_14 = by_year[(by_year[\"year\"] >= 2005) & (by_year[\"year\"] <= 2014)]\n",
+    "    total_05_14 = decade_05_14[\"id\"].sum()\n",
+    "    decade_95_04 = by_year[(by_year[\"year\"] >= 1995) & (by_year[\"year\"] <= 2004)]\n",
+    "    total_95_04 = decade_95_04[\"id\"].sum()\n",
+    "    if total_95_04 != 0:\n",
+    "        pct = round(100.0 * (total_05_14 - total_95_04) / total_95_04, 2)\n",
+    "    else:\n",
+    "        pct = None\n",
+    "    return total_95_04, total_05_14, pct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "state_counts[\"name\"] = state_counts.index\n",
+    "state_counts[\"total_95-04\"], state_counts[\"total_05-14\"], state_counts[\"percentage_change\"] =\\\n",
+    "    zip(*state_counts[\"name\"].apply(lambda x: quake_percentage_change(x)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "States with at least 5 earthquakes from 1995-2004 (sorted by percentage change decade-over-decade):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>state</th>\n",
+       "      <th>name</th>\n",
+       "      <th>total_95-04</th>\n",
+       "      <th>total_05-14</th>\n",
+       "      <th>percentage_change</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Oklahoma</th>\n",
+       "      <td>899</td>\n",
+       "      <td>Oklahoma</td>\n",
+       "      <td>14</td>\n",
+       "      <td>860</td>\n",
+       "      <td>6042.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Arkansas</th>\n",
+       "      <td>147</td>\n",
+       "      <td>Arkansas</td>\n",
+       "      <td>9</td>\n",
+       "      <td>70</td>\n",
+       "      <td>677.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Kansas</th>\n",
+       "      <td>61</td>\n",
+       "      <td>Kansas</td>\n",
+       "      <td>6</td>\n",
+       "      <td>45</td>\n",
+       "      <td>650</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Texas</th>\n",
+       "      <td>130</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>21</td>\n",
+       "      <td>74</td>\n",
+       "      <td>252.38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hawaii</th>\n",
+       "      <td>640</td>\n",
+       "      <td>Hawaii</td>\n",
+       "      <td>72</td>\n",
+       "      <td>240</td>\n",
+       "      <td>233.33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Illinois</th>\n",
+       "      <td>61</td>\n",
+       "      <td>Illinois</td>\n",
+       "      <td>5</td>\n",
+       "      <td>15</td>\n",
+       "      <td>200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Arizona</th>\n",
+       "      <td>174</td>\n",
+       "      <td>Arizona</td>\n",
+       "      <td>22</td>\n",
+       "      <td>65</td>\n",
+       "      <td>195.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Virginia</th>\n",
+       "      <td>28</td>\n",
+       "      <td>Virginia</td>\n",
+       "      <td>5</td>\n",
+       "      <td>13</td>\n",
+       "      <td>160</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Colorado</th>\n",
+       "      <td>143</td>\n",
+       "      <td>Colorado</td>\n",
+       "      <td>35</td>\n",
+       "      <td>69</td>\n",
+       "      <td>97.14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>New Mexico</th>\n",
+       "      <td>165</td>\n",
+       "      <td>New Mexico</td>\n",
+       "      <td>39</td>\n",
+       "      <td>57</td>\n",
+       "      <td>46.15</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            state        name  total_95-04  total_05-14 percentage_change\n",
+       "Oklahoma      899    Oklahoma           14          860           6042.86\n",
+       "Arkansas      147    Arkansas            9           70            677.78\n",
+       "Kansas         61      Kansas            6           45               650\n",
+       "Texas         130       Texas           21           74            252.38\n",
+       "Hawaii        640      Hawaii           72          240            233.33\n",
+       "Illinois       61    Illinois            5           15               200\n",
+       "Arizona       174     Arizona           22           65            195.45\n",
+       "Virginia       28    Virginia            5           13               160\n",
+       "Colorado      143    Colorado           35           69             97.14\n",
+       "New Mexico    165  New Mexico           39           57             46.15"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "state_counts[state_counts[\"total_95-04\"] >= 5].sort_values(by=\"percentage_change\", ascending=False).head(10)"
+   ]
   },
   {
    "cell_type": "code",
